--- a/phanse2.html
+++ b/phanse2.html
@@ -15,9 +15,9 @@
 <body>
     <form style="padding: 40px;">
         <div style="display: flex; ">
-            <button style="margin-bottom: 15px; margin-right: 5px; border: none; background-color: #5d6a69; color: white;">Phanse1</button>
-            <button style="margin-bottom: 15px; margin-right: 5px; border: none; background-color: white">Phanse2</button>
-            <button style="margin-bottom: 15px; margin-right: 5px;border: none; background-color: #5d6a69; color: white;">Phanse3</button>
+            <button style="margin-bottom: 15px; margin-right: 5px; border: none; background-color: #5d6a69; color: white;">Phase1</button>
+            <button style="margin-bottom: 15px; margin-right: 5px; border: none; background-color: white">Phase2</button>
+            <button style="margin-bottom: 15px; margin-right: 5px;border: none; background-color: #5d6a69; color: white;">Phase3</button>
             <button style="margin-bottom: 15px;border: none; background-color: #5d6a69; color: white;">Summary</button>
         </div>
         <div class="row" style="margin-bottom: 6px;">
